# ToDoApp

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5a724b990c3a_initial_migration.py
migrations/: 001_users.sql  002_tasks.sql
src/: .env.example  config.py  db.py  dependencies.py  main.py
src/base/: exceptions.py  models.py  repository.py
src/tasks/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/users/: __init__.py  auth.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
tests/: conftest.py
tests/tasks/: test_repository.py  test_router.py  test_service.py
tests/users/: test_auth.py  test_repository.py  test_router.py  test_service.py
