[project]
name = "todoapp"
version = "1.0.0"
description = "Basic To do app"
authors = [
    {name = "rasadov",email = "raufasadov23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi (==0.115.12)",
    "sqlalchemy (==2.0.40)",
    "asyncpg (==0.30.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "bcrypt (==4.3.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "greenlet (==3.2.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.8)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "packaging (==25.0)",
    "passlib (==1.7.4)",
    "pbs-installer (==2025.4.9)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "poetry (==2.1.2)",
    "poetry-core (==2.1.2)",
    "pydantic (==2.11.3)",
    "pydantic-core (==2.33.1)",
    "pyjwt (==2.10.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.1.0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.2)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.4.11.15)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.30.0)",
    "zstandard (==0.23.0)",
    "tzlocal (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
fastapi = "0.115.12"
sqlalchemy = "2.0.40"
asyncpg = "0.30.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
bcrypt = "4.3.0"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
dulwich = "0.22.8"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
greenlet = "3.2.1"
h11 = "0.14.0"
httpcore = "1.0.8"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
keyring = "25.6.0"
more-itertools = "10.7.0"
msgpack = "1.1.0"
packaging = "25.0"
passlib = "1.7.4"
pbs-installer = "2025.4.9"
pkginfo = "1.12.1.2"
platformdirs = "4.3.7"
poetry = "2.1.2"
poetry-core = "2.1.2"
pydantic = "2.11.3"
pydantic-core = "2.33.1"
pyjwt = "2.10.1"
pyproject-hooks = "1.2.0"
python-dotenv = "1.1.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.13.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.46.2"
tomlkit = "0.13.2"
trove-classifiers = "2025.4.11.15"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
urllib3 = "2.4.0"
virtualenv = "20.30.0"
zstandard = "0.23.0"
