[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "simple RESTful API application for managing task list"
authors = ["rasadov <raufasadov23@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12"
uvicorn = ">=0.34.2"
sqlalchemy = ">=2.0.40"
pydantic = ">=2.11.3"
asyncpg = ">=0.30.0"
psycopg2-binary = ">=2.9.10"
passlib = ">=1.7.4"
bcrypt = ">=4.3.0"
PyJWT = ">=2.10.1"
python-dotenv = ">=1.1.0"
httpx = ">=0.28.1"
anyio = ">=4.9.0"
alembic = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-asyncio = ">=0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"